--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head> 
     <body>
         <div class="cont">
-            <p class="text">PARA EL AMOR DE MI VIDA</p>
+            <p class="text">I LOVE YOU</p>
             <p class="text2">De: <span>Alexander</span> Para: <span>Evelyn</span></p>
         </div>
         <div class="body">
