Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <div class="cont">
             <p class="text">I LOVE YOU BB</p>
-            <p class="text2">De: <span>Alexander</span> Para: <span>Evelyn</span></p>
+            <p class="text2">De: <span>Mí</span> Para: <span>Ti</span></p>
         </div>
         <div class="body">
             <div class="night"></div>
